@@ -64,6 +64,11 @@
       this._endpoint_media = `${this._endpoint_base_media}1.1/`;
 
       /**
+       * The publish API endpoint to use
+       */
+      this._endpoint_publish = "https://publish.twitter.com/";
+
+      /**
        * The API endpoint base to use
        */
       this._endpoint_oauth = this._endpoint_base;
@@ -1171,6 +1176,8 @@
         url = this._endpoint_oauth + method;
       } else if (this._detectMedia(method)) {
         url = this._endpoint_media + method + ".json";
+      } else if (method === "statuses/oembed") {
+        url = this._endpoint_publish + "oembed";
       } else {
         url = this._endpoint + method + ".json";
       }
